--- a/XYZReader/src/main/res/layout/activity_material_article_detail.xml
+++ b/XYZReader/src/main/res/layout/activity_material_article_detail.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay"
+        android:elevation="4dp"
         app:elevation="4dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -52,6 +53,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
+        android:elevation="6dp"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
         app:srcCompat="@drawable/ic_share" />
