--- a/XYZReader/src/main/res/layout/activity_material_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_material_article_list.xml
@@ -10,6 +10,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="4dp"
+        app:elevation="4dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -35,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:elevation="6dp"
         app:elevation="6dp"
         app:pressedTranslationZ="12dp"
         app:layout_behavior="com.example.xyzreader.materialUI.ScrollAwareFABBehavior"
