--- a/XYZReader/src/main/res/layout/activity_material_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_material_article_list.xml
@@ -18,6 +18,7 @@
             android:id="@+id/tlBar_list"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -39,7 +40,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:elevation="6dp"
         app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
+        app:pressedTranslationZ="6dp"
         app:layout_behavior="com.example.xyzreader.materialUI.ScrollAwareFABBehavior"
         app:srcCompat="@drawable/ic_arrow_up" />
 
